// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapSearchResultsItem rendering should render an item 1`] = `
<li
  className="map-search-results__item"
>
  <button
    className="map-search-results__item-button"
    onClick={[MockFunction]}
    title="Dam 1"
  >
    <section
      className="map-search-results__item-content"
    >
      <div
        className="map-search-results__item-name"
      >
        Dam 1
      </div>
    </section>
    <Component
      className="map-search-results__item-arrow"
    />
  </button>
</li>
`;

exports[`MapSearchResultsItem rendering should update an item 1`] = `
<li
  className="map-search-results__item"
>
  <button
    className="map-search-results__item-button"
    onClick={[MockFunction]}
    title="ABC123"
  >
    <section
      className="map-search-results__item-content"
    >
      <div
        className="map-search-results__item-name"
      >
        ABC123
      </div>
    </section>
    <Component
      className="map-search-results__item-arrow"
    />
  </button>
</li>
`;
